# porsche-mcp

./: .gitignore  MASTER_PLAN.md  README.md  pyproject.toml
data/: nhtsa_complaints.json  nhtsa_recalls.json
data/books/: porsche_classic_era.json  reno_air_cooled_tech_book.json  reno_water_cooled_tech_book.json
data/brakes/: brake_specs.json
data/diy/: 356_tech.json  cayenne_tech.json  macan_tech.json  pelican_parts_tech.json  rennlist_911_tech.json  scrape_forums.py  scrape_rennlist_911.py
data/electrical/: electrical_specs.json
data/engines/: engine_codes.json
data/fault_codes/: fault_codes.json  fault_codes_full.json
data/fluids/: fluid_specs.json
data/issues/: common_issues.json
data/maintenance/: schedules.json
data/market/: bat_auctions.json
data/models/: 356_models.json  all_models.json  build_db.py  build_db2.py  build_db3.py  build_db4.py  build_db5.py  build_models.py  missing_models.json
data/option_codes/: option_codes.json  option_codes_full.json
data/paint_codes/: paint_codes.json  rennbow_colors.json
data/performance/: performance_data.json
data/racing/: le_mans_results.json  racing_history.json
data/suspension/: suspension_specs.json
data/torque/: torque_specs.json
data/transmissions/: gear_ratios.json
data/vin/: vin_decoder.json
data/wheels/: wheel_tire_specs.json
landing-page/: index.html
marketing/: social_posts.md
src/reno_porsche_mcp/: __init__.py  data_loader.py  server.py  tools.py
