[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reno-porsche-mcp"
version = "0.1.0"
description = "The most comprehensive Porsche technical database as an MCP server — by Reno Rennsport"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Reno Rennsport" },
]
keywords = ["porsche", "mcp", "automotive", "technical-data", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
reno-porsche-mcp = "reno_porsche_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reno_porsche_mcp"]
